# aqc-communication

./: .clangd  .gitignore  CMakeLists.txt  Makefile  sdkconfig
components/async/: CMakeLists.txt  future.hpp
components/communication/: CMakeLists.txt  communication_handler.cpp  communication_handler.hpp  communication_manager.hpp
components/communication/ble/: ble_manager.cpp  ble_manager.hpp  i_ble_transport.hpp
components/communication/serial/: i_serial_transport.hpp  serial_manager.cpp  serial_manager.hpp
components/communication/transport/: ble_transporter.cpp  ble_transporter.hpp  chunked_receiver.cpp  chunked_receiver.hpp  chunked_sender.cpp  chunked_sender.hpp  chunked_transporter.cpp  chunked_transporter.hpp  i_transport.hpp
components/communication/transport/ble/: ble_transporter.cpp  ble_transporter.hpp
components/communication/transport/chunked/: chunked_receiver.cpp  chunked_receiver.hpp  chunked_sender.hpp  chunked_transporter.cpp  chunked_transporter.hpp
components/core/async/: CMakeLists.txt  future.hpp  semaphore.hpp
components/core/core_async/: CMakeLists.txt
components/core/logger/: CMakeLists.txt  i_logger.hpp  logger.cpp  logger.hpp
components/core/logger/console_logger/: CMakeLists.txt  console_logger.cpp  console_logger.hpp
components/core/logger/idf_logger/: CMakeLists.txt
components/core/logger/serial_logger/: CMakeLists.txt  serial_logger.hpp
components/core/result/: CMakeLists.txt  result.hpp
components/core/store/: CMakeLists.txt  i_store.hpp
components/hal/ble_hal/: CMakeLists.txt  ble_hal.cpp  ble_hal.hpp  i_ble_hal.hpp  i_ble_transport.hpp
components/hal/esp32/ble_hal/: CMakeLists.txt  ble_hal.cpp
components/hal/esp32/esp32_async/: CMakeLists.txt
components/hal/esp32/esp32_ble_hal/: CMakeLists.txt  ble_hal.cpp  ble_hal.hpp
components/hal/esp32/esp32_http_client/: CMakeLists.txt
components/hal/esp32/esp32_logger/: CMakeLists.txt
components/hal/esp32/esp32_serial_hal/: CMakeLists.txt  serial_hal.cpp  serial_hal.hpp
components/hal/esp32/esp32_store/nvs_store/: CMakeLists.txt
components/hal/esp32/logger/idf_logger/: idf_logger.cpp  idf_logger.hpp
components/hal/esp32/serial_hal/: CMakeLists.txt  i_serial_hal.hpp  serial_hal.hpp
components/hal/esp32/store/nvs_store/: nvs_store.cpp  nvs_store.hpp
components/hal/http_client/: CMakeLists.txt  i_http_client.hpp
components/hal/posix/posix_async/: CMakeLists.txt
components/hal/serial_hal/: CMakeLists.txt  i_serial_hal.hpp  i_serial_transport.hpp  serial_hal.cpp  serial_hal.hpp
components/hal/storage/nvs_store/: CMakeLists.txt  i_store.hpp  nvs_store.hpp
components/hal/store/nvs_store/: nvs_store.cpp
components/handlers/: CMakeLists.txt  base_handler.hpp  handler_factory.hpp
components/handlers/scd40_handler/: CMakeLists.txt  scd40_handler.hpp
components/handlers/sps30/: CMakeLists.txt
components/handlers/sps30_handler/: CMakeLists.txt  sps30_handler.hpp
components/logging/: CMakeLists.txt  i_logger.cpp  i_logger.hpp  idf_logger.cpp  idf_logger.hpp  logger.cpp  logger.hpp  serial_logger.cpp  serial_logger.hpp
components/platform/esp32/platform_async/: CMakeLists.txt
components/platform/posix/platform_async/: CMakeLists.txt
components/result/: result.hpp
components/storage/: CMakeLists.txt
components/storage/nvs/: nvs_store.cpp  nvs_store.hpp
components/transport/: CMakeLists.txt  i_transport.hpp
components/transport/chunked_transport/: CMakeLists.txt  chunked_receiver.cpp  chunked_receiver.hpp  chunked_sender.cpp  chunked_sender.hpp  chunked_transporter.cpp  chunked_transporter.hpp  packet.hpp
components/transport/chunked_transport/ble_transport/: CMakeLists.txt  ble_transporter.cpp  ble_transporter.hpp
components/transport/chunked_transport/serial_transport/: CMakeLists.txt  serial_transporter.cpp  serial_transporter.hpp
main/: CMakeLists.txt  main.cpp  main_esp32.cpp  main_posix.cpp
models/: CMakeLists.txt  commands.hpp  scd40.hpp  sps30.hpp
